--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -155,16 +155,16 @@ function myFunction() {
 <a href="#Multivariate normal distribution (part 1)">Multivariate normal distribution (part 1)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Mean and dispersion">Mean and dispersion</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 1">Problem set 1</a>
 </li>
 <li>
 <a href="#Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Nonsingular and singular">Nonsingular and singular</a>
+<a href="#Justifying the defintion using characteristic function">Justifying the defintion using characteristic function</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Back to normal">Back to normal</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 2">Problem set 2</a>
@@ -173,10 +173,28 @@ function myFunction() {
 <a href="#Multivariate normal distribution (part 3)">Multivariate normal distribution (part 3)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Independent vs uncorrelated">Independent vs uncorrelated</a>
+<a href="#Mean and dispersion">Mean and dispersion</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 3">Problem set 3</a>
+</li>
+<li>
+<a href="#Multivariate normal distribution (part 4)">Multivariate normal distribution (part 4)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Nonsingular and singular">Nonsingular and singular</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 4">Problem set 4</a>
+</li>
+<li>
+<a href="#Multivariate normal distribution (part 5)">Multivariate normal distribution (part 5)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Independent vs uncorrelated">Independent vs uncorrelated</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 5">Problem set 5</a>
 </li>
 <li>
 <a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
@@ -185,7 +203,7 @@ function myFunction() {
 <a href="#Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 4">Problem set 4</a>
+<a href="#Problem set 6">Problem set 6</a>
 </li>
 <li>
 <a href="#$t$  and $F$  distributions">$t$  and $F$  distributions</a>
@@ -197,13 +215,13 @@ function myFunction() {
 <a href="#$F$  distributions">$F$  distributions</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 5">Problem set 5</a>
+<a href="#Problem set 7">Problem set 7</a>
 </li>
 <li>
 <a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 6">Problem set 6</a>
+<a href="#Problem set 8">Problem set 8</a>
 </li>
 <li>
 <a href="#Miscellaneous problems">Miscellaneous problems</a>
@@ -216,6 +234,8 @@ $\newcommand{\k}[1]{\chi^2_{(#1)}}$
 
 <h1><a
 name="Multivariate normal distribution (part 1)">Multivariate normal distribution (part 1)</a></h1>
+<a href="https://youtu.be/3EQggZLAYKY">Video for this section</a>
+<p></p>
 Here we shall discuss the most commonly used multivariate distribution, the multivariate normal distribution. 
 <p></p>
 First we shall recast the defnition of univariate normal from the last chapter to a form suitable for generalisation to higher
@@ -246,12 +266,37 @@ For any $\v\mu\in{\mathbb R}^m$  and any NND $\Sigma_{m\times m}$  we define  $N
  $A_{m\times m}$  is any matrix
  such that $\Sigma = AA'.$
 </fieldset>
-The only point that one feels uncomfortable about is the choice of $A.$  in the univariate case, obtaining $\sigma$ 
- from $\sigma^2$  was straightforward, just take the unique nonnegative square root. But in the multivariate set up
- there are, ingeneral infinitely many choices for $A$  such that $\Sigma=AA'.$  Which one should we take. Fortunately
- it dows not matter here, because as we are going to show now, any choice leads to the same distribution of $A\v X+\v\mu.$ 
+The only point that you might feel uncomfortable about is the choice of $A.$  In the univariate
+ case, obtaining $\sigma$ 
+ from $\sigma^2$  was straightforward: we could just take the (unique) nonnegative square root. But in
+ the multivariate set up
+ there are, in general, infinitely many choices for $A$  such that $\Sigma=AA'.$  Which
+ one should we take? Fortunately
+ it does not matter here, because as we are going to show now, any choice leads to the same distribution of $A\v X+\v\mu.$ 
 <p></p>
-For this purpose we shall use characteristic functions. In the multivariate set up, they are defined as follows.
+For this purpose we shall use characteristic functions. 
+<h2><a
+name="Problem set 1">Problem set 1</a></h2>
+
+<p>
+<b>EXERCISE 1:</b>&nbsp;Follow the definition to obtain the density of $\v Y = \left[\begin{array}{ccccccccccc}Y_1\\Y_2
+\end{array}\right]\sim N_2\left(\left[\begin{array}{ccccccccccc}10\\20
+\end{array}\right],\left[\begin{array}{ccccccccccc}1 &amp; 0\\0 &amp; 4
+\end{array}\right]\right).$
+You may use $A = \left[\begin{array}{ccccccccccc}1 &amp; 0\\0 &amp; 2
+\end{array}\right].$  
+</p>
+
+<p></p>
+
+<h1><a
+name="Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a></h1>
+<a href="https://youtu.be/EJd_YvDzI_s">Video for this section</a>
+<p></p>
+
+<h2><a
+name="Justifying the defintion using characteristic function">Justifying the defintion using characteristic function</a></h2>
+In the multivariate set up, characteristic function is  defined as follows.
 <p></p>
 
 <fieldset>
@@ -271,7 +316,12 @@ For any ${\mathbb R}^m$-valued random vector, its characteristic function exists
 <p>
 <b><i>Proof:</i></b>Not in this course.<b><i>[QED]</i></b>
 </p>
-Now let us return to the definition multivariate normal. We shall take any $A$  with
+Now let us return to the definition multivariate normal. 
+<p></p>
+
+<h2><a
+name="Back to normal">Back to normal</a></h2>
+We shall take any $A$  with
  $\Sigma=AA',$  and show that the 
  characteristic function of $\Sigma\v X+\v\mu$  will depend on $A$  only through $AA'=\Sigma.$  So the particular
  choice of $A$  will not matter.
@@ -289,7 +339,36 @@ E(\exp(i\v t'(A\v X+\v \mu))
 which indeed does not involve $A.$ 
 <p></p>
 As a by product of the above steps we also get the characteristic function of $N_m(\v\mu,\Sigma).$ 
+<h2><a
+name="Problem set 2">Problem set 2</a></h2>
+
+<p>
+<b>EXERCISE 2:</b>&nbsp;Write down the characteristic function of $N_2(\v\mu,\Sigma)$  where $\v\mu=\left[\begin{array}{ccccccccccc}1\\2
+\end{array}\right]$  and $\Sigma=\left[\begin{array}{ccccccccccc}2&amp;1\\1&amp;3
+\end{array}\right].$</p>
+
 <p></p>
+
+<p>
+<b>EXERCISE 3:</b>&nbsp;There are algorithms that will take $\Sigma$  as input and produce an $A$  as
+ output suh that $\Sigma=AA'.$  The Cholsesky (read as ko-less-key) decomposition algorithm is
+ one such (implemeted in the R function chol). But for small matrices, it is possible to
+ construct $A$  by hand. Suppose $\Sigma=\left[\begin{array}{ccccccccccc}2&amp;1\\1&amp;3
+\end{array}\right].$  Find a lower triangular $A$  with $\Sigma=AA'.$ </p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 4:</b>&nbsp;Find $$\v\mu$ $  and $\Sigma$  if $N_2(\v\mu,\Sigma)$  has characteristic function
+ $\xi(t_1,t_2) = \exp(-2t_1^2-t_2^2+t_1t_2)$  for $(t_1,t_2)\in{\mathbb R}^2.$</p>
+
+<p>
+<b>EXERCISE 5:</b>&nbsp;True or false: The characteristic function of $N_m(\v\mu,\Sigma)$  is real-valued if and only if $\v\mu=\v0.$</p>
+
+<p></p>
+
+<h1><a
+name="Multivariate normal distribution (part 3)">Multivariate normal distribution (part 3)</a></h1>
 
 <h2><a
 name="Mean and dispersion">Mean and dispersion</a></h2>
@@ -312,22 +391,22 @@ and $V(\v Y) = V(A\v X+\v\mu) = A V(\v X)A' = AA'=\Sigma.$
 </p>
 
 <h2><a
-name="Problem set 1">Problem set 1</a></h2>
+name="Problem set 3">Problem set 3</a></h2>
 
 <p>
-<b>EXERCISE 1:</b>&nbsp;Find $E(\v X)$  and $V(\v X)$  if $\v X$  has characteristic function
+<b>EXERCISE 6:</b>&nbsp;Find $E(\v X)$  and $V(\v X)$  if $\v X$  has characteristic function
  $\xi(t_1,t_2) = \exp(-2t_1^2-t_2^2+t_1t_2)$  for $(t_1,t_2)\in{\mathbb R}^2.$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 2:</b>&nbsp;If $\v X\sim N_m(\v\mu,\Sigma)$  and the components of $\v X$  are all independent,
+<b>EXERCISE 7:</b>&nbsp;If $\v X\sim N_m(\v\mu,\Sigma)$  and the components of $\v X$  are all independent,
  then what can you say about the structure of $\Sigma?$</p>
 
 <p></p>
 
 <h1><a
-name="Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a></h1>
+name="Multivariate normal distribution (part 4)">Multivariate normal distribution (part 4)</a></h1>
 As we have already mentioned, a multivariate normal distribution need not always have a density. However, for an important
  special case, it does. This case is called the nonsingular
  case, while the other case is called singular. We discuss these next.
@@ -391,15 +470,15 @@ Hence the result.
 <p></p>
 
 <h2><a
-name="Problem set 2">Problem set 2</a></h2>
+name="Problem set 4">Problem set 4</a></h2>
 
 <p>
-<b>EXERCISE 3:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
+<b>EXERCISE 8:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 4:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
+<b>EXERCISE 9:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
 $$\left[\begin{array}{ccccccccccc}X\\Y
 \end{array}\right] \sim N_2(\v 0, J_2).$$
 If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$ , what will the scatterplot look like?
@@ -408,7 +487,7 @@ If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$ , what will the scatterp
 <p></p>
 
 <h1><a
-name="Multivariate normal distribution (part 3)">Multivariate normal distribution (part 3)</a></h1>
+name="Multivariate normal distribution (part 5)">Multivariate normal distribution (part 5)</a></h1>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
@@ -429,7 +508,7 @@ Directly from definition. Just be careful that the variance matrix is $B\Sigma B
 </p>
 
 <p></p>
-In particular, we have the following corrolary.
+In particular, we have the following corollary.
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
 If $\v X = (X_1,...,X_n)'\sim N_n(\v \mu,\Sigma),$  then any subvector of  $\v X$  has multivariate normal distribution
@@ -498,13 +577,43 @@ and hence $\v X_1$  and $\v X_2$  are independent, as required.
 <p></p>
 
 <h2><a
-name="Problem set 3">Problem set 3</a></h2>
+name="Problem set 5">Problem set 5</a></h2>
+
+<p>
+<b>EXERCISE 10:</b>&nbsp;Let $\left[\begin{array}{ccccccccccc}\v X\_{m\times 1}\\\v Y
+\end{array}\right] \sim N_{m+n}\left(\v 0, \left[\begin{array}{ccccccccccc}A_{m\times m} &amp; B\\B' &amp;
+ C
+\end{array}\right]\right).$  What is the distribution of $\v X$  and $\v Y$  separately? </p>
 
 <p></p>
-Next we shall discuss some distributions related to the normal distribution.
+
+<p>
+<b>EXERCISE 11:</b>&nbsp;(Continuation of the last problem) If $\left[\begin{array}{ccccccccccc}A &amp; B\\B' &amp; C
+\end{array}\right]$  is nonsingular, then
+ show that the conditional distribution of $\v Y$  given $\v X=\v x$  is 
+$N_{n-m} (B'A ^{-1}\v x, D-B'A ^{-1} B).$
+<p></p>
+[You will need the following not-so-well-known result from linear algebra: If $P = \left[\begin{array}{ccccccccccc}A &amp; B \\ C &amp; D
+\end{array}\right]$  is a nonsingular
+ matrix, where $A$  is also nonsingular, then
+$$P ^{-1} = \left[\begin{array}{ccccccccccc}A ^{-1} + A ^{-1}BXC A ^{-1} &amp; -A ^{-1} BX\\ -XC A ^{-1} &amp; X
+\end{array}\right],$$ 
+where $X = (D-CA ^{-1} B) ^{-1}.$ 
+<p></p>
+Also, be warned! The proof is somewhat long!]
+</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 12:</b>&nbsp;Let $\v X\sim N_n(\v\mu,I).$  Let $\v a, \v b\in{\mathbb R}^n$  be orthogonal to each
+ other. Show that $\v a'\v X$  and $\v b'\v X$  must be independent.</p>
+
+<p></p>
+
 <h1><a
 name="$\chi^2$  distribution">$\chi^2$  distribution</a></h1>
-
+Starting from this section, we shall discuss some distributions related to the normal distribution.
 <fieldset>
 <legend><b>Definition: $\chi^2$</b></legend>If $X_1,...,X_n$  are IID $N(0,1)$  then the distribution of $\sum_1^n X_i^2$ 
  is called <b><font color="red" size="40">chi-square distribution with degrees of freedom</font></b> 
@@ -573,12 +682,12 @@ Also $\|\v Y\|^2 = \sum_1^k Z_i^2\sim\k k,$  as required.
 <p></p>
 
 <p>
-<b>EXERCISE 5:</b>&nbsp;
+<b>EXERCISE 13:</b>&nbsp;
 Let $A$  be a symmetric, idempotent matrix. Let $\v X'A\v X\sim\k{r(A)}.$  Show tjis. 
 </p>
 The following result is used in linear models. 
 <p>
-<b>EXERCISE 6:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
+<b>EXERCISE 14:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
  containing $\v \mu.$  Then show that the orthogonal projection of $\v X$  onto
  $S^\perp$  must have $\k {n-k}$  distribution.</p>
 
@@ -592,7 +701,7 @@ If $X_1,...,X_n$  are independent $N(\mu_i,1),$  then the distribution $\sum X_i
 </fieldset>
 
 <h2><a
-name="Problem set 4">Problem set 4</a></h2>
+name="Problem set 6">Problem set 6</a></h2>
 
 <h1><a
 name="$t$  and $F$  distributions">$t$  and $F$  distributions</a></h1>
@@ -662,7 +771,7 @@ $$f(x) =\left\{\begin{array}{ll}\mbox{const }x^{\frac m2-1}(mx+n)^{-\frac{m+n}{2
 <p></p>
 
 <h2><a
-name="Problem set 5">Problem set 5</a></h2>
+name="Problem set 7">Problem set 7</a></h2>
 
 <h1><a
 name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h1>
@@ -692,7 +801,7 @@ Let $X_1,...,X_n$  be IID $N(\mu, \sigma^2).$  Then
 </fieldset>
 
 <h2><a
-name="Problem set 6">Problem set 6</a></h2>
+name="Problem set 8">Problem set 8</a></h2>
 
 <p></p>
 
@@ -700,22 +809,22 @@ name="Problem set 6">Problem set 6</a></h2>
 name="Miscellaneous problems">Miscellaneous problems</a></h1>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
+<b>EXERCISE 15:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
  find $E(X)$  and $V(X)$  in terms of $a,b,c.$  Also find median of $X.$</p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
+<b>EXERCISE 16:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
 and $Y$ have $N(0,1)$ distribution, but $(X,Y)$
 is not bivariate normal.</p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
+<b>EXERCISE 17:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
 $\mu\in{\mathbb R}^n$  and  $\Sigma$  be any $n\times n$  PD matrix. Suggest how you can
  use the software to generate a single observation from $N_n(\mu,\Sigma).$  Assume that the
  software can perform matrix operations.</p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
+<b>EXERCISE 18:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
  $(X,Y)$  lies in the annulus shown below?
 <center>
 <table width="100%">
@@ -731,41 +840,41 @@ Express you answer in terms CDF of some standard distribution.
 </p>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
+<b>EXERCISE 19:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
  $\mu\in{\mathbb R}$  and $\sigma^2&gt;0.$  Find $a&lt;b$  such that $P\left(a&lt; \frac{\bar
  X-\mu}{S/\sqrt{n}} &lt; b\right) = 0.95$  and $b-a$  is the least possible subject to this.</p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 20:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 21:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 22:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 16:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 20:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 21:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr/>
