--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -231,7 +231,7 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-$\newcommand{\v}[1]{{\mathbf #1}}$
+$\newcommand{\v}[1]{\boldsymbol{#1}}$
 $\newcommand{\k}[1]{\chi^2_{(#1)}}$
 <title>Multivariate normal and related distributions</title>
 
@@ -551,35 +551,36 @@ name="Problem set 4">Problem set 4</a></h2>
 <b>EXERCISE 8:</b>&nbsp;If $\v X\sim N_m(\v\mu,\Sigma)$  and the components of $\v X$  are all independent,
  then what can you say about the structure of $\Sigma?$</p>
 
+<p></p>
+
 <p>
-<b>EXERCISE 9:</b>&nbsp;Let $\left[\begin{array}{ccccccccccc}\v X\_{m\times 1}\\\v Y
-\end{array}\right] \sim N_{m+n}\left(\v 0, \left[\begin{array}{ccccccccccc}A_{m\times m} &amp; B\\B' &amp;
+<b>EXERCISE 9:</b>&nbsp;Let $\v X\sim N_n(\v\mu,I).$  Let $\v a, \v b\in{\mathbb R}^n$  be orthogonal to each
+ other. Show that $\v a'\v X$  and $\v b'\v X$  must be independent.</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 10:</b>&nbsp;Let $\left[\begin{array}{ccccccccccc}\v X_{m\times 1}\\\v Y
+\end{array}\right] \sim N_{m+n}\left(\left[\begin{array}{ccccccccccc}\v \mu_1\\\v\mu_2
+\end{array}\right], \left[\begin{array}{ccccccccccc}A_{m\times m} &amp; B\\B' &amp;
  C
 \end{array}\right]\right).$  What is the distribution of $\v X$  and $\v Y$  separately? </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;(Continuation of the last problem) If $\left[\begin{array}{ccccccccccc}A &amp; B\\B' &amp; C
-\end{array}\right]$  is nonsingular, then
- show that the conditional distribution of $\v Y$  given $\v X=\v x$  is 
-$N_{n-m} (B'A ^{-1}\v x, D-B'A ^{-1} B).$
-<p></p>
-[You will need the following not-so-well-known result from linear algebra: If $P = \left[\begin{array}{ccccccccccc}A &amp; B \\ C &amp; D
-\end{array}\right]$  is a nonsingular
- matrix, where $A$  is also nonsingular, then
-$$P ^{-1} = \left[\begin{array}{ccccccccccc}A ^{-1} + A ^{-1}BXC A ^{-1} &amp; -A ^{-1} BX\\ -XC A ^{-1} &amp; X
-\end{array}\right],$$ 
-where $X = (D-CA ^{-1} B) ^{-1}.$ 
-<p></p>
-Also, be warned! The proof is somewhat long! You may like to first do the case $m=1$  and $n=2.$]
+<b>EXERCISE 11:</b>&nbsp;(Continuation of the last problem) If $A$ is nonsingular, then show that $\v
+ Y-B'A ^{-1}\v X$  and
+ $\v X$  are independent.
 </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;Let $\v X\sim N_n(\v\mu,I).$  Let $\v a, \v b\in{\mathbb R}^n$  be orthogonal to each
- other. Show that $\v a'\v X$  and $\v b'\v X$  must be independent.</p>
+<b>EXERCISE 12:</b>&nbsp;(Continuation of the last problem) Write $\v Y = B'A ^{-1} \v X + (\v Y-B'A ^{-1}\v X)$  and 
+ show that the conditional distribution of $\v Y$  given $\v X=\v x$  is 
+$N_{n-m} (\v \mu_2+B'A ^{-1}(\v x-\v\mu_1), D-B'A ^{-1} B).$  [Does this remind you of multiple regression?]
+</p>
 
 <p></p>
 
@@ -651,12 +652,12 @@ Hence the result.
 name="Problem set 5">Problem set 5</a></h2>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
+<b>EXERCISE 13:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
+<b>EXERCISE 14:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
 $$\left[\begin{array}{ccccccccccc}X\\Y
 \end{array}\right] \sim N_2(\v 0, J_2).$$
 If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$ , what will the scatterplot look like?
@@ -735,12 +736,12 @@ Also $\|\v Y\|^2 = \sum_1^k Z_i^2\sim\k k,$  as required.
 <p></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;
+<b>EXERCISE 15:</b>&nbsp;
 Let $A$  be a symmetric, idempotent matrix. Let $\v X'A\v X\sim\k{r(A)}.$  Show tjis. 
 </p>
 The following result is used in linear models. 
 <p>
-<b>EXERCISE 15:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
+<b>EXERCISE 16:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
  containing $\v \mu.$  Then show that the orthogonal projection of $\v X$  onto
  $S^\perp$  must have $\k {n-k}$  distribution.</p>
 
@@ -862,22 +863,22 @@ name="Problem set 8">Problem set 8</a></h2>
 name="Miscellaneous problems">Miscellaneous problems</a></h1>
 
 <p>
-<b>EXERCISE 16:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
+<b>EXERCISE 17:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
  find $E(X)$  and $V(X)$  in terms of $a,b,c.$  Also find median of $X.$</p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
+<b>EXERCISE 18:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
 and $Y$ have $N(0,1)$ distribution, but $(X,Y)$
 is not bivariate normal.</p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
+<b>EXERCISE 19:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
 $\mu\in{\mathbb R}^n$  and  $\Sigma$  be any $n\times n$  PD matrix. Suggest how you can
  use the software to generate a single observation from $N_n(\mu,\Sigma).$  Assume that the
  software can perform matrix operations.</p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
+<b>EXERCISE 20:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
  $(X,Y)$  lies in the annulus shown below?
 <center>
 <table width="100%">
@@ -893,41 +894,41 @@ Express you answer in terms CDF of some standard distribution.
 </p>
 
 <p>
-<b>EXERCISE 20:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
+<b>EXERCISE 21:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
  $\mu\in{\mathbb R}$  and $\sigma^2&gt;0.$  Find $a&lt;b$  such that $P\left(a&lt; \frac{\bar
  X-\mu}{S/\sqrt{n}} &lt; b\right) = 0.95$  and $b-a$  is the least possible subject to this.</p>
 
 <p>
-<b>EXERCISE 21:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 22:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 22:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 31:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 32:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr/>
