--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -185,19 +185,25 @@ function myFunction() {
 <a href="#Mean and dispersion">Mean and dispersion</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Independent vs zero covariance">Independent vs zero covariance</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 4">Problem set 4</a>
 </li>
 <li>
 <a href="#Multivariate normal distribution (part 5)">Multivariate normal distribution (part 5)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Nonsingular and singular">Nonsingular and singular</a>
+<a href="#Independent vs zero covariance">Independent vs zero covariance</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 5">Problem set 5</a>
+</li>
+<li>
+<a href="#Multivariate normal distribution (part 6)">Multivariate normal distribution (part 6)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Nonsingular and singular">Nonsingular and singular</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 6">Problem set 6</a>
 </li>
 <li>
 <a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
@@ -206,7 +212,7 @@ function myFunction() {
 <a href="#Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 6">Problem set 6</a>
+<a href="#Problem set 7">Problem set 7</a>
 </li>
 <li>
 <a href="#$t$  and $F$  distributions">$t$  and $F$  distributions</a>
@@ -218,13 +224,13 @@ function myFunction() {
 <a href="#$F$  distributions">$F$  distributions</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 7">Problem set 7</a>
+<a href="#Problem set 8">Problem set 8</a>
 </li>
 <li>
 <a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 8">Problem set 8</a>
+<a href="#Problem set 9">Problem set 9</a>
 </li>
 <li>
 <a href="#Miscellaneous problems">Miscellaneous problems</a>
@@ -456,6 +462,8 @@ Find the distribution of $\v Y = (2X_1-3X_4+X_5,~~X_1+X_4)'.$
 
 <h1><a
 name="Multivariate normal distribution (part 4)">Multivariate normal distribution (part 4)</a></h1>
+<a href="https://youtu.be/wFf2WTW_5M0">Video for this section</a>
+<p></p>
 
 <h2><a
 name="Mean and dispersion">Mean and dispersion</a></h2>
@@ -476,6 +484,26 @@ Hence $E(\v Y) = E(A\v X+\v\mu) = A E(\v X)+\v\mu = \v\mu,$
 and $V(\v Y) = V(A\v X+\v\mu) = A V(\v X)A' = AA'=\Sigma.$ 
 <b><i>[QED]</i></b>
 </p>
+
+<h2><a
+name="Problem set 4">Problem set 4</a></h2>
+
+<p>
+<b>EXERCISE 7:</b>&nbsp;Find $E(\v X)$  and $V(\v X)$  if $\v X$  has characteristic function
+ $\xi(t_1,t_2) = \exp(-2t_1^2-t_2^2+t_1t_2)$  for $(t_1,t_2)\in{\mathbb R}^2.$</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 8:</b>&nbsp;If $\v X\sim N_m(\v\mu,\Sigma)$  and the components of $\v X$  are all independent,
+ then what can you say about the structure of $\Sigma?$</p>
+
+<p></p>
+
+<h1><a
+name="Multivariate normal distribution (part 5)">Multivariate normal distribution (part 5)</a></h1>
+<a href="https://youtu.be/Y9Y1bHsltoA">Video for this section</a>
+<p></p>
 
 <p></p>
 
@@ -529,7 +557,7 @@ since $\Sigma_{12}=O.$
 Again
 $$\v t'\v \mu = \left[\begin{array}{ccccccccccc}\v t_1' &amp; \v t_2'
 \end{array}\right]\left[\begin{array}{ccccccccccc}\v \mu_1 &amp; \v \mu_2
-\end{array}\right]  = \v t_1'\v \mu+\v t_2'\v \mu_2$$
+\end{array}\right]  = \v t_1'\v \mu_1+\v t_2'\v \mu_2$$
 So the characteristic function factorises as
 $$\xi_{\v X}(\v t)\equiv \xi_{\v X_1}(\v t_1)\xi_{\v X_1}(\v t_2),$$
 and hence $\v X_1$  and $\v X_2$  are independent, as required.
@@ -537,19 +565,39 @@ and hence $\v X_1$  and $\v X_2$  are independent, as required.
 </p>
 
 <p></p>
-
-<h2><a
-name="Problem set 4">Problem set 4</a></h2>
-
-<p>
-<b>EXERCISE 7:</b>&nbsp;Find $E(\v X)$  and $V(\v X)$  if $\v X$  has characteristic function
- $\xi(t_1,t_2) = \exp(-2t_1^2-t_2^2+t_1t_2)$  for $(t_1,t_2)\in{\mathbb R}^2.$</p>
-
+An important corollary is the following result.
 <p></p>
 
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>If $\v X\sim N_n(\v\mu, I)$  and $A_{p\times n}$  qr $B_{q\times n}$  are any
+ two fixed matrices with $AB'=O,$  then $A\v X$  and $B\v X$  must be independent.</fieldset>
+
 <p>
-<b>EXERCISE 8:</b>&nbsp;If $\v X\sim N_m(\v\mu,\Sigma)$  and the components of $\v X$  are all independent,
- then what can you say about the structure of $\Sigma?$</p>
+<b><i>Proof:</i></b>
+Immediate rom the theorem (try it!).
+<b><i>[QED]</i></b>
+</p>
+
+<p></p>
+A further corollary is 
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>Suppose that $\v X\sim N_n(\v\mu, I)$  and let $S, T$  be two mutually orthogonal
+ subspaces of ${\mathbb R}^n.$  Let $\v Y$ and $\v Z$  be orthogonal projections of $\v
+ X$  on $S$  and $T,$  respectively. Then $\v Y$  and $\v Z$  must be independent.</fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+
+<p></p>
+Let $P_S$  and $P_T$  be the orthogonal projection operators for $S$  and $T.$
+  Then they are both symmetric idempotent matrices with $P_SP_T = 0.$
+<p></p>
+Now apply the last theorem.
+<b><i>[QED]</i></b>
+</p>
+
+<h2><a
+name="Problem set 5">Problem set 5</a></h2>
 
 <p></p>
 
@@ -584,8 +632,27 @@ $N_{n-m} (\v \mu_2+B'A ^{-1}(\v x-\v\mu_1), D-B'A ^{-1} B).$  [Does this remind 
 
 <p></p>
 
+<p>
+<b>EXERCISE 13:</b>&nbsp;Let $\v X\sim N_n(\v0,I).$  We take some subspace of ${\mathbb R}^n,$  and project $\v
+ X$  on it to get a vector $\v Y.$  Let $\v Z = \v X-\v Y.$  The situation is
+ depicted pictorially below.
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/projrej.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+Show that $\v Y$  and $\v Z$  are independent.
+</p>
+
+<p></p>
+
 <h1><a
-name="Multivariate normal distribution (part 5)">Multivariate normal distribution (part 5)</a></h1>
+name="Multivariate normal distribution (part 6)">Multivariate normal distribution (part 6)</a></h1>
 As we have already mentioned, a multivariate normal distribution need not always have a density. However, for an important
  special case, it does. This case is called the nonsingular
  case, while the other case is called singular. We discuss these next.
@@ -595,16 +662,14 @@ As we have already mentioned, a multivariate normal distribution need not always
 name="Nonsingular and singular">Nonsingular and singular</a></h2>
 
 <fieldset>
-<legend><b><i>Theorem</i></b></legend>$N_m(\v\mu,\Sigma)$  admits a density if and only if $\Sigma$  is a nonsingular  matrix. 
-In this case, the density is 
+<legend><b><i>Theorem</i></b></legend>If $\Sigma$  is a nonsingular  matrix, then $N_m(\v\mu,\Sigma)$  has density  
 $$\frac{1}{\sqrt{(2\pi)^n det(\Sigma)}}\exp\left(-\frac 12(\v y-\v\mu)'\Sigma ^{-1}(\v y-\v\mu)\right)\mbox{ for }\v y\in{\mathbb R}^n,$$ 
-<p></p>
-
+If $\Sigma$  is singular, then the distribution does not admit a density.
 </fieldset>
 
 <p>
 <b><i>Proof:</i></b>
-<u>If part</u>: Since $\Sigma$  is NND, we can write $\Sigma = AA'$  for some 
+<u>Nonsingular case</u>: Since $\Sigma$  is NND, we can write $\Sigma = AA'$  for some 
  $A_{m\times m}.$ 
  So $N_m(\v\mu,\Sigma)$ 
  is the distribution of $A\v X+\v\mu,$  where $\v X$  has IID $N(0,1)$  components.
@@ -621,7 +686,8 @@ $$\frac{1}{\sqrt{(2\pi)^n det(\Sigma)}}\exp\left(-\frac 12(\v y-\v\mu)'\Sigma ^{
 as required.
 <p></p>
 
-<u>Only if part</u>: Actually, this part does not even require normality. Let $\v Y$  have dispersion matrix $\Sigma$ 
+<u>Singular case</u>: Actually, this part does not even require normality. Let $\v Y$  have
+ dispersion matrix $\Sigma$ 
  which is singular. 
 <p></p>
 Let, if possible, $\v Y$  have density.
@@ -649,15 +715,15 @@ Hence the result.
 <p></p>
 
 <h2><a
-name="Problem set 5">Problem set 5</a></h2>
+name="Problem set 6">Problem set 6</a></h2>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
+<b>EXERCISE 14:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
+<b>EXERCISE 15:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
 $$\left[\begin{array}{ccccccccccc}X\\Y
 \end{array}\right] \sim N_2(\v 0, J_2).$$
 If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$ , what will the scatterplot look like?
@@ -682,32 +748,22 @@ $\k n$  is the same as $Gamma\left(\frac n2,\frac 12\right).$
 
 <p>
 <b><i>Proof:</i></b>
-We shall proceed by induction.
+Let $X_1,...,X_n$  be IID $N(0,1).$
 <p></p>
-
-<u>Basis</u>: $n=1$: Let $X\sim N(0,1).$
-<p></p>
-Then $X^2$  has CDF $F(\cdot),$  where $F(a)=0$  for $a&lt;0$  and for $a\geq 0$  we have
-$$F(a) = P(X^2\leq a) =\frac{1}{\sqrt{2\pi}} \int_{-\sqrt a}^{\sqrt a} e^{-x^2/2}\, dx=\frac{2}{\sqrt{2\pi}} \int_0^{\sqrt a} e^{-x^2/2}\, dx.$$
+Then $X_1^2$  has CDF $F(\cdot),$  where $F(a)=0$  for $a&lt;0$  and for $a\geq 0$  we have
+$$F(a) = P(X_1^2\leq a) =\frac{1}{\sqrt{2\pi}} \int_{-\sqrt a}^{\sqrt a} e^{-x^2/2}\, dx=\frac{2}{\sqrt{2\pi}} \int_0^{\sqrt a} e^{-x^2/2}\, dx.$$
 Differentiating wrt $a$  we get the density
 $$f(a) = F'(a) = \frac{2}{\sqrt{2\pi}} e^{-a/2}\mbox{ for }a&gt;0.$$
-We immediately recognise it as the $\k 1$  density, completing the basis.
+We immediately recognise it as the $Gamma\left(\frac 12,\frac 12\right)$  density.
 <p></p>
-
-<u>Hypothesis</u>: Assume the result for $n=1,...,m$  fir some $m\geq 1.$
-<p></p>
-
-<u>Step</u>: Shall show for $n=m+1.$  
-<p></p>
-Let $X_1,....,X_m,X_{m+1}$  be IID $N(0,1).$  
-<p></p>
-Then $\sum_1^{m+1} X_i^2 = \underbrace{\sum_1^m X_i^2}_Y + \underbrace{X_{m+1}^2}_Z.$
-<p></p>
-By the inducion hypothesis both $Y\sim Gamma\left(\frac m2,\frac 12\right)$  and $Z\sim Gamma\left(\frac 12,\frac 12\right).$ 
+So $X_i^2\sim Gamma\left(\frac 12,\frac 12\right)$   for $i=1,2,...,n.$
 <p></p>
 Also they are independent. 
 <p></p>
-So $Y+Z\sim Gamma\left(\frac{m+1}{2},\frac 12\right),$  as required. 
+So, by the additivity property of the $Gamma$  distribution, we have 
+ $\sum_1^n X_i^2 \sim  Gamma\left(\frac{n}{2},\frac 12\right).$
+<p></p>
+Hence $\k n\equiv  Gamma\left(\frac{n}{2},\frac 12\right),$   as required. 
 <b><i>[QED]</i></b>
 </p>
 
@@ -736,12 +792,12 @@ Also $\|\v Y\|^2 = \sum_1^k Z_i^2\sim\k k,$  as required.
 <p></p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;
-Let $A$  be a symmetric, idempotent matrix. Let $\v X'A\v X\sim\k{r(A)}.$  Show tjis. 
+<b>EXERCISE 16:</b>&nbsp;
+Let $A$  be a symmetric, idempotent matrix. Let $\v X'A\v X\sim\k{r(A)}.$  Show this. 
 </p>
 The following result is used in linear models. 
 <p>
-<b>EXERCISE 16:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
+<b>EXERCISE 17:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
  containing $\v \mu.$  Then show that the orthogonal projection of $\v X$  onto
  $S^\perp$  must have $\k {n-k}$  distribution.</p>
 
@@ -755,7 +811,7 @@ If $X_1,...,X_n$  are independent $N(\mu_i,1),$  then the distribution $\sum X_i
 </fieldset>
 
 <h2><a
-name="Problem set 6">Problem set 6</a></h2>
+name="Problem set 7">Problem set 7</a></h2>
 
 <h1><a
 name="$t$  and $F$  distributions">$t$  and $F$  distributions</a></h1>
@@ -825,37 +881,54 @@ $$f(x) =\left\{\begin{array}{ll}\mbox{const }x^{\frac m2-1}(mx+n)^{-\frac{m+n}{2
 <p></p>
 
 <h2><a
-name="Problem set 7">Problem set 7</a></h2>
+name="Problem set 8">Problem set 8</a></h2>
 
 <h1><a
 name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h1>
 
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-If $X_1,...,X_n$  are IID $N(\mu, \sigma^2),$  then for $a_1,...,a_n\in{\mathbb R}$   we have $\sum a_i X_i\sim N\left(\mu\sum a_i, \sigma^2\sum a_i^2\right).$
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>Easy.<b><i>[QED]</i></b>
-</p>
-
 <p></p>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-Let $X_1,...,X_n$  be IID $N(\mu, \sigma^2).$  Then 
+Let $X_1,...,X_n$  be a random sample (<i>i.e.</i>, IID) from $N(\mu, \sigma^2).$ We consider
+ the sampe mean $\bar X=\frac 1n\sum _1^nX_i$  and sample variance $S^2=\frac 1n\sum_1^n (X_i-\bar X)^2.$   Then 
 <ol type="">
 
-<li>$\overline X\sim N\left(\mu,\frac{\sigma^2}{n}]\right)$</li>
+<li>$\bar X\sim N\left(\mu,\frac{\sigma^2}{n}\right)$</li>
+
+<li>nS^2\sim \k {n-1}</li>
+
+<li>$\bar X$  and $S^2$  are independent.</li>
 
 </ol>
 
-<p></p>
-
 </fieldset>
 
+<p>
+<b><i>Proof:</i></b>
+In ${\mathbb R}^n$  consider the subspace $V=span\{\v 1\},$  where $\v 1$  is the vector of al $1$'s. Clearly,
+ $dim(V)=1$  and $dim(V^\perp)=n-1.$
+<p></p>
+We have learnt that in ${\mathbb R}^n$  the component (<i>i.e.</i>, orthogonal projection) of one vector $\v v$  along
+ another vector $\v u$  is $\frac{\v u'\v v}{\v u'\v u}\v u.$ 
+<p></p>
+So the orthogonal projection of $\v X$  along $\v 1$  (<i>i.e.</i>, on $V$) is $\bar X\v 1.$  
+<p></p>
+Hence the orthogonal projection of $\v X$  on $V^\perp$  is  
+$$\v Y = \v X-\bar X\v 1 = \left[\begin{array}{ccccccccccc}X_1-\bar X\\\vdots\\X_n-\bar X
+\end{array}\right].$$
+So from earlier result, we immediately see that these two projections must be independent.
+<p></p>
+Now $\bar X$  is a function of the first projection, while $S^2$  is a function of the second. So they are independent.
+<p></p>
+Also $nS^2 = \|\v Y\|^2\sim \k{n-1}.$
+<p></p>
+The distribution of $\bar X$  is obvious from an earlier theorem.
+<b><i>[QED]</i></b>
+</p>
+
 <h2><a
-name="Problem set 8">Problem set 8</a></h2>
+name="Problem set 9">Problem set 9</a></h2>
 
 <p></p>
 
@@ -863,22 +936,22 @@ name="Problem set 8">Problem set 8</a></h2>
 name="Miscellaneous problems">Miscellaneous problems</a></h1>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
+<b>EXERCISE 18:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
  find $E(X)$  and $V(X)$  in terms of $a,b,c.$  Also find median of $X.$</p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
+<b>EXERCISE 19:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
 and $Y$ have $N(0,1)$ distribution, but $(X,Y)$
 is not bivariate normal.</p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
+<b>EXERCISE 20:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
 $\mu\in{\mathbb R}^n$  and  $\Sigma$  be any $n\times n$  PD matrix. Suggest how you can
  use the software to generate a single observation from $N_n(\mu,\Sigma).$  Assume that the
  software can perform matrix operations.</p>
 
 <p>
-<b>EXERCISE 20:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
+<b>EXERCISE 21:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
  $(X,Y)$  lies in the annulus shown below?
 <center>
 <table width="100%">
@@ -894,41 +967,41 @@ Express you answer in terms CDF of some standard distribution.
 </p>
 
 <p>
-<b>EXERCISE 21:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
+<b>EXERCISE 22:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
  $\mu\in{\mathbb R}$  and $\sigma^2&gt;0.$  Find $a&lt;b$  such that $P\left(a&lt; \frac{\bar
  X-\mu}{S/\sqrt{n}} &lt; b\right) = 0.95$  and $b-a$  is the least possible subject to this.</p>
 
 <p>
-<b>EXERCISE 22:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 31:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 32:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 32:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 33:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr/>
